# deadnix

./: .pre-commit-hooks.yaml  Cargo.toml  README.md  example.nix  flake.nix  test.nix
.github/: FUNDING.yml
.github/workflows/: build.yml  checks.yml  flakestry-publish.yaml  update.yml
src/: binding.rs  dead_code.rs  dead_code_tests.rs  edit.rs  edit_tests.rs  lib.rs  main.rs  report.rs  scope.rs  usage.rs
