[package]
name = "deadnix"
description = "Find unused code in Nix projects"
version = "0.1.0"
authors = ["Astro <astro@spaceboyz.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/astro/deadnix"
repository = "https://github.com/astro/deadnix.git"
documentation = "https://docs.rs/deadnix"

[dependencies]
rowan = "0.12"
rnix = "0.10"
clap = "2"
