[package]
name = "deadnix"
description = "Find unused code in Nix projects"
version = "0.1.7"
authors = ["Astro <astro@spaceboyz.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/astro/deadnix"
repository = "https://github.com/astro/deadnix.git"
documentation = "https://docs.rs/deadnix"

[dependencies]
rowan = "0.12"  # dependency version of rnix-0.10.1
rnix = "0.10"
clap = "3"
walkdir = "2"
ariadne = "0.1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = [ "json-out" ]
json-out = [ "serde", "serde_json" ]
